멤버십 구독자 체크 view - 운영 도메인으로 변경

--- a/views/membership_check.html
+++ b/views/membership_check.html
@@ -12,7 +12,7 @@
 </body>
 
 <script>
-    const domain = "http://43.133.64.160:3001";
+    const domain = "https://api.motifme.io";
 
     $(document).ready(function(){
         getMembershipList();
